--- a/help.html
+++ b/help.html
@@ -56,10 +56,10 @@
     <div class="container container--mobile flex flex-column--mobile">
         <main>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.png">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.png">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-clogged-nozzle-mobile.png">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-clogged-nozzle.png" alt="this should be a printhead">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>CLOGGED </span>nozzles</h2>
@@ -70,10 +70,10 @@
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
             <picture class="flex flex-center">
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-orange-print.webp" alt="this should be a printhead">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-my-model-mobile.png">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-my-model-mobile.png">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-my-model-mobile.png">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-my-model.png" alt="this should be a printhead">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>MY MODEL</span> disappears in the slicer</h2>
