Add content to about section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
         <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
             <div class="column-2 column-2-mobile text-white text-shadow flex-order">
                 <h2><span>3D</span>Printing resources for you!</h2>
+                <p>Discover how we can help you with getting on track in your 3D printing journey!<br>
+                    We start easy and over time we will get into the nitty gritty stuff. Promised!
+                </p>
             </div>
             <div class="column-2 column-2-mobile flex flex-end align-center-mobile">
                 <div class="grid-wrapper">
