Delete br from about text content

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
             <div class="column-2 column-2-mobile text-white text-shadow flex-order">
                 <h2><span>3D</span>Printing resources for you!</h2>
-                <p>Discover how we can help you with getting on track in your 3D printing journey!<br>
+                <p>Discover how we can help you with getting on track in your 3D printing journey!
                     We start easy and over time we will get into the nitty gritty stuff. Promised!
                 </p>
             </div>
