Delete unneeded content, add background

--- a/response.html
+++ b/response.html
@@ -42,54 +42,18 @@
     </header>
     <!--RESPONSIVE HEADER END-->
 
-    <!--HEADER SECTION START-->
-    <section class="section-half flex flex-center flex-column flex-between background">
-        <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile text-white text-shadow">
-            <h1><span>BASICS</span> of 3D Printing</h1>
-        </div>
-        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
-    </section>
-
     <!--CONTENT SECTION START-->
-    <section class="section-full flex flex-center section-padding--bottom">
+    <section class="section-full flex flex-center section-padding--bottom background-reverse">
     <div class="container container--mobile flex flex-column--mobile">
         <main>
-            <picture>
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h2 class="margin-bottom--s"><span>WHAT </span>is 3D Printing?</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article>
-                <h2 class="margin-bottom--s"><span>WHICH </span>3D Printers are there?</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            </article>
-            <picture>
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-orange-print.webp" alt="this should be a printhead">
-            </picture>
-            <article class="margin-top--l margin-bottom--l">
-                <h2 class="margin-bottom--s"><span>HOW</span> can I use a 3D Printer?</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article>
-                <h2 class="margin-bottom--s"><span>CAN</span> I build my own?</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            </article>
+            
         </main>
     </div>
     </section>
     
 
     <!--FOOTER START-->
-    <footer class="flex flex-center">
+    <footer class="flex flex-center fix-bottom>
         <div class="container container-mobile flex flex-center">
             <div class="column-2 column-2-mobile hide">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
