Add content and styles to response page

--- a/response.html
+++ b/response.html
@@ -44,16 +44,18 @@
 
     <!--CONTENT SECTION START-->
     <section class="section-full flex flex-center section-padding--bottom background-reverse">
-    <div class="container container--mobile flex flex-column--mobile">
-        <main>
-            
+    <div class="container container--mobile flex flex-center  flex-column--mobile text-center">
+        <main class="response rounded box-shadow">
+            <h1><span>CONGRATULATIONS!</span></h1>
+            <p class="margin-top--s">Thanks for your mail, we will come back to you within 48h!</p>
+            <p class="margin-top--s hide">You have also signed up for the newsletter, thanks!</p>
         </main>
     </div>
     </section>
     
 
     <!--FOOTER START-->
-    <footer class="flex flex-center fix-bottom>
+    <footer class="flex flex-center fix-bottom">
         <div class="container container-mobile flex flex-center">
             <div class="column-2 column-2-mobile hide">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
