--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <!--FOOTER START-->
     <footer class="flex flex-center">
         <div class="container container-mobile flex flex-center container-mobile--100">
-            <div class="column-2 column-2-mobile hide">
+            <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p class="footer-text">An educational static website project</p>
             </div>
