Change class on response to hide footer logo on mobile only

--- a/response.html
+++ b/response.html
@@ -57,7 +57,7 @@
     <!--FOOTER START-->
     <footer class="flex flex-center fix-bottom">
         <div class="container container-mobile flex flex-center">
-            <div class="column-2 column-2-mobile hide">
+            <div class="column-2 column-2-mobile hide-mobile">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p>An educational static website project</p>
             </div>
