Change form wrapper div to form tag (semantics)

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
             <div class="column-2 column-2-mobile flex flex-end flex-center--mobile">
-                <div class="form-wrapper flex flex-column box-shadow">
+                <form class="form-wrapper flex flex-column box-shadow">
                     <h3 class="text-center">Lets stay in contact!</h3>
                     <label for="fname">Your first name <span class="red-star">*</span></label>
                     <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
@@ -154,7 +154,7 @@
                             SEND FORM
                         </a>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
         <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
