--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
             <div class="column-2 column-2-mobile flex flex-end flex-center--mobile">
-                <form class="form-wrapper flex flex-column box-shadow">
+                <form action="https://rebellionwebdesign.github.io/fab-forever/response.html" class="form-wrapper flex flex-column box-shadow">
                     <h3 class="text-center">Lets stay in contact!</h3>
                     <label for="fname">Your first name <span class="red-star">*</span></label>
                     <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
@@ -147,13 +147,7 @@
                         <input type="checkbox" id="newsletter" name="newsletter">
                         <label class="newsletter" for="newsletter">I also want the newsletter!</label>
                     </div>
-                    <div class="button-wrapper">
-                        <a class="button text-white"
-                            href="https://rebellionwebdesign.github.io/fab-forever/response.html"
-                            aria-label="this links to the basics page" rel="noopener" target="_blank">
-                            SEND FORM
-                        </a>
-                    </div>
+                    <input class="button margin-top--l" type="submit" value="Send Form!" aria-label="this submits your form data">
                 </form>
             </div>
         </div>
