--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
     </footer>
     <!--FOOTER END-->
     <script src="assets/js/mobile-menu.js" defer></script>
+    <script src="assets/js/checkbox.js" defer></script>
 </body>
 
 </html>
