Add id hidden to hidden text in response

--- a/response.html
+++ b/response.html
@@ -48,7 +48,7 @@
         <main class="response rounded box-shadow">
             <h1><span>CONGRATULATIONS!</span></h1>
             <p class="margin-top--s">Thanks for your mail, we will come back to you within 48h!</p>
-            <p class="margin-top--s hide">You have also signed up for the newsletter, thanks!</p>
+            <p id="hidden" class="margin-top--s hide">You have also signed up for the newsletter, thanks!</p>
         </main>
     </div>
     </section>
