Add script to response page

--- a/response.html
+++ b/response.html
@@ -84,5 +84,6 @@
 
 
     <script src="assets/js/mobile-menu.js" defer></script>
+    <script src="assets/js/show.js" defer></script>
 </body>
 </html>
