Fix overflow caused by shape dividers

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!--ABOUT SECTION START-->
     <section class="section-full background-reverse flex flex-center flex-column flex-between">
-        <img class="flip-x" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+        <img class="flip-x divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
             <div class="column-2 column-2-mobile text-white text-shadow flex-order">
                 <h2><span>3D</span>Printing resources for you!</h2>
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </div>
-        <img class="fdivider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
+        <img class="divider divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
     </section>
     <!--ABOUT SECTION END-->
 
@@ -126,7 +126,7 @@
 
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column flex-between">
-        <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
+        <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile flex-column-mobile flex">
             <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order">
                 <h2><span>GOT</span> questions?</h2>
@@ -151,7 +151,7 @@
                 </form>
             </div>
         </div>
-        <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
+        <img class="flip-x divider divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
     </section>
     <!--CONTACT SECTION END-->
 
