Add main tag to content, fix unnecessary class

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <!--RESPONSIVE HEADER END-->
-
+<main>
     <!--HERO SECTION START-->
     <section class="section-full background-mask flex flex-center">
         <div class="container container-mobile flex flex-center--y flex-column-mobile">
@@ -154,7 +154,7 @@
         <img class="flip-x divider divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the bottom shape divider">
     </section>
     <!--CONTACT SECTION END-->
-
+</main>
     <!--FOOTER START-->
     <footer class="flex flex-center">
         <div class="container container-mobile flex flex-center container-mobile--100">
