--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!--HERO SECTION START-->
     <section class="section-full background-mask flex flex-center">
         <div class="container container-mobile flex flex-center--y flex-column-mobile">
-            <div class="column-2 column-2-mobile">
+            <div class="column-2 column-2-mobile text-center">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p class="column-2__text">Bring your ideas to life with our comprehensive roundup!</p>
                 <div class="button-wrapper">
