--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container container-mobile flex flex-center--y flex-column-mobile">
             <div class="column-2 column-2-mobile text-center">
                 <h1><span>NEW</span> to 3D Printing?</h1>
-                <p class="column-2__text">Bring your ideas to life with our comprehensive roundup!</p>
+                <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                 <div class="button-wrapper">
                     <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
                         aria-label="this links to the basics page" rel="noopener" target="_blank">
