Fix text-center needs to go to parent

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <main>
     <!--HERO SECTION START-->
     <section class="section-full background-mask flex flex-center">
-        <div class="container container-mobile flex flex-center--y flex-column-mobile">
-            <div class="column-2 column-2-mobile text-center">
+        <div class="container container-mobile flex flex-center--y flex-column-mobile text-center">
+            <div class="column-2 column-2-mobile">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
                 <div class="button-wrapper">
