Fix unnessecary class (delete)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
             <div class="column-2 column-2-mobile text-white text-shadow flex-order">
                 <h2><span>3D</span>Printing resources for you!</h2>
-                <p class="column-2__text">Discover how we can help you with getting on track in your 3D printing journey!
+                <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing journey!
                     We start easy and over time we will get into the nitty gritty stuff. Promised!
                 </p>
             </div>
@@ -130,7 +130,7 @@
         <div class="container container-mobile flex-column-mobile flex">
             <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order">
                 <h2><span>GOT</span> questions?</h2>
-                <p class="column-2__text">Feel free to contact us at any time! We will come back to you as soon as
+                <p class="margin-top--s">Feel free to contact us at any time! We will come back to you as soon as
                     possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
             <div class="column-2 column-2-mobile flex flex-end flex-center--mobile">
