Fix wrong classnames

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <main>
     <!--HERO SECTION START-->
     <section class="section-full background-mask flex flex-center">
-        <div class="container container-mobile flex flex-center--y flex-column-mobile text-center">
+        <div class="container container-mobile flex flex-center--y flex-column-mobile text-center-mobile">
             <div class="column-2 column-2-mobile">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p class="margin-top--s">Bring your ideas to life with our comprehensive roundup!</p>
@@ -66,7 +66,7 @@
                     </a>
                 </div>
             </div>
-            <div class="column-2 column-2-mobile">
+            <div class="column-2 column-2-mobile flex flex-end">
                 <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
             </div>
         </div>
@@ -74,10 +74,10 @@
     <!--HERO SECTION END-->
 
     <!--ABOUT SECTION START-->
-    <section class="section-full background-reverse flex flex-center flex-column flex-between text-center">
+    <section class="section-full background-reverse flex flex-center flex-column flex-between text-center-mobile">
         <img class="flip-x divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
-            <div class="column-2 column-2-mobile flex-column-mobile text-white text-shadow flex-order">
+            <div class="column-2 column-2-mobile flex-column-mobile text-white text-shadow flex-order-mobile">
                 <h2><span>3D</span>Printing resources for you!</h2>
                 <p class="margin-top--s">Discover how we can help you with getting on track in your 3D printing journey!
                     We start easy and over time we will get into the nitty gritty stuff. Promised!
@@ -106,8 +106,8 @@
 
     <!--TESTIMONIAL SECTION START-->
     <section class="section-half flex flex-center">
-        <div class="container flex container-mobile flex-center flex-column-mobile text-center">
-            <div class="column-2 column-2-mobile flex-order">
+        <div class="container flex container-mobile flex-center flex-column-mobile text-center-mobile">
+            <div class="column-2 column-2-mobile flex-order-mobile">
                 <h2 class="text-shadow"><span>HOW</span> we help people</h2>
             </div>
             <div
@@ -125,8 +125,8 @@
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column flex-between">
         <img class="divider" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile flex-column-mobile flex text-center">
-            <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order">
+        <div class="container container-mobile flex-column-mobile flex text-center-mobile">
+            <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order-mobile">
                 <h2><span>GOT</span> questions?</h2>
                 <p class="margin-top--s">Feel free to contact us at any time! We will come back to you as soon as
                     possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
